<resources>
    <string name="app_name">Farmy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">I already have an account</string>
    <string name="click_to_register">Create an account</string>
    <string name="logout">Logout</string>
    <string name="run_model">Running the model...</string>
    <string name="detect">Detect</string>
    <string name="add_image">Add an Image of your Plant</string>
    <string name="capture_image">Capture Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="gallery">Gallery</string>
    <string name="live">Live</string>
    <string name="save_results">Save Results</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_passowrd">Confirm Password</string>
    <string name="control_procedure">Control Procedure</string>
    <string name="go_to_home">Go to Home</string>
    <string name="disease">Disease</string>
    <string name="date">Date</string>
    <string name="farmy">Farmy</string>
    <string name="scanned_diseases">Scanned Diseases</string>
    <string name="scan_image">Scan Image</string>
    <string name="contact_us">Contact Us</string>
    <string name="select_agent">Select Agent</string>
    <string name="please_select">Please Select</string>
    <string name="subject">Subject</string>
    <string name="your_email">Your Email</string>
    <string name="description">Description</string>
    <string name="submit_question">Submit Question</string>
    <string name="marketplace">Marketplace</string>
    <string name="user_account_details">User Account Details</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="update_user_details">Update User Details</string>
    <string name="log_out">Log Out</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_description">Shop Description</string>
    <string name="shop_location">Shop Location</string>
    <string name="contact_number">Contact Number</string>
    <string name="contact">Contact</string>

    <string-array name="fields">
        <item>Field 1</item>
        <item>Field 2</item>
        <item>Field 3</item>
        <item>Field 4</item>
    </string-array>
</resources>